Changelog
=========


1.6.5 (unreleased)
------------------

- Nothing changed yet.


1.6.4 (2016-12-01)
------------------

- Do not detach script tags of type x-handlebars-template. jQuery is not able to re-attach them.
  [mathias.leimgruber]


1.6.3 (2016-11-25)
------------------

- Close the mobile-navigation when the screen size changes from mobile
  to desktop while the navigation is open.
  [raphael-s]


1.6.2 (2016-11-09)
------------------

- Actually mark external links with a "external-link" class in navtree.
  [mathias.leimgruber]


1.6.1 (2016-11-08)
------------------

- Toggle aria-hidden attribute on mobile navigation elements
  [raphael-s]


1.6.0 (2016-11-07)
------------------

- Add various JavaScript events for convenience. [jone]


1.5.1 (2016-10-20)
------------------

- Hide current path on root when showing one level. [jone]

- Fix invalid markup in template, causing broken markup with chameleon. [jone]


1.5.0 (2016-10-17)
------------------

- Mobile buttons: add settings "show_tabs" and "show_two_levels_on_root". [jone]

- Pass the url of the navigation root to the handlebars template.
  [mbaechtold]

- Use helper text for screenreaders also as title attribute on the link itself.
  [mathias.leimgruber]

- Implement plone translations for handlebars templates.
  [mathias.leimgruber]

- Do not render handlebars templates with PageTemplate engine.
  [mathias.leimgruber]

- Add "navActiveNode" class to the node which is currently loaded. [jone]

- Add separate "current node" item in addition to "parent node". [jone]

- Leaf nodes: open parent navigation. [jone]

- Prevent inline javascript from evaluating twice.
  [Kevin Bieri]


1.4.0 (2016-09-26)
------------------

- Install ``ftw.gopip`` for better performance. [jone]

- Mark leaf nodes and remove link to children. [jone]


1.3.0 (2016-09-20)
------------------

- Add support for plone.app.multilingual [Kevin Bieri]


1.2.0 (2016-09-09)
------------------
